# bigua-analyzer

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/workflows/: codeql.yaml  codeql.yml
bigua_analyzer/: __init__.py  analysis_scope.py  cli.py  core.py  gitops.py  io_utils.py  metrics.py  perf.py  sdlc.py  time_utils.py  types.py
bigua_analyzer/ai/: __init__.py  ai_influence.py  ai_metrics.py  html_renderer.py  llm_client.py  prompt_builder.py  report_generator.py
bigua_analyzer/visualization/: __init__.py  plots.py
bigua_project_docs/: datasets.md  metrics.md  related-work.md  roadmap.md
docs/: index.md
scripts/: benchmark_workers.py  security_audit.py
templates/: analysis_prompt.txt
tests/: test_ai_influence.py  test_cli.py  test_llm_client.py  test_metrics_integration.py  test_outputs.py  test_prompt_builder.py  test_report_generator.py  test_visualization.py
