[project]
name = "bigua-analyzer"
version = "0.5.0"
description = "A research tool that analyzes public GitHub repositories to extract socio-technical development metrics."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.33.1",
  "pandas>=2.1.0",
  "matplotlib>=3.10.8",
]

[project.optional-dependencies]
ai = [
  "markdown>=3.10.2",
]

[project.scripts]
bigua-analyzer = "bigua_analyzer.cli:main"