[tool.setuptools]
packages = ["bigua_analyzer"]

[project]
name = "bigua-analyzer"
version = "0.5.0"
description = "A research tool that analyzes public GitHub repositories to extract socio-technical development metrics."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.1.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
ai = [
  "markdown>=3.5",
]

[project.scripts]
bigua-analyzer = "bigua_analyzer.cli:main"